--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -1,7 +1,5 @@
 <app-header></app-header>
 
-
-
 @if (!mainNavService.mobile) {}
 <button (click)="mainNavService.toggleNav()"
   class="w-[60px] h-fit fixed top-[581px] left-0 rounded-tr-[30px] rounded-br-[30px] pt-[23px] pr-[14px] pb-[23px] pl-[14px] flex flex-col items-center justify-center gap-2 shadow-[4px_4px_7px_rgba(0,0,0,0.2)] bg-transparent text-black hover:bg-white/100 transition-all ease-in duration-100 z-50">
@@ -31,47 +29,29 @@
   </div>
   }
 
-    @if (mainNavService.showChannel()) {
-        <div class="flex flex-col w-full h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
-            @if (mainNavService.directMessage) {
-                <app-chat-header [chatType]="'dm'" class="mb-[10px]"></app-chat-header>
-                <div class="flex flex-1 w-full overflow-y-auto">
-                    <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages" [chatType]="'dm'"></app-chat-messages>
-                </div>
-            } @else {
-                <app-chat-header [chatType]="'channel'" class="mb-[10px]"></app-chat-header>
-                <div class="flex flex-1 w-full overflow-y-auto">
-                    <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages" [chatType]="'channel'"></app-chat-messages>
-                </div>
-            }
-            <app-chat-input class=""></app-chat-input>
-        </div>
-    }
-
-    @if (mainNavService.showThread()) {
-        <!-- <div class="flex flex-col w-full xl:max-w-[485px] h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
-            <app-chat-header [chatType]="'thread'" class="mb-[10px]"></app-chat-header>
-            <div class="flex flex-1 w-full overflow-y-auto">
-                <app-chat-messages [messages]="channelService.messages[0].answers" [chatType]="'thread'" [threadHeadMessage]="channelService.messages[0]"></app-chat-messages>
-            </div>
-            <app-chat-input class=""></app-chat-input>
-        </div> -->
-        <app-thread class="w-full h-[100% - 3rem] xl:max-w-[485px] my-6"></app-thread>
-    }
-    <app-chat-input class=""></app-chat-input>
-  </div>
-  }
-
-  @if (channelService.messages[0].answers !== undefined && mainNavService.showThread()) {
-  <div class="flex flex-col w-full xl:max-w-[485px] h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
-    <app-chat-header [chatType]="'thread'" class="mb-[10px]"></app-chat-header>
+  @if (mainNavService.showChannel()) {
+  <div class="flex flex-col w-full h-[100% - 3rem] my-6 pb-4 bg-white rounded-[30px]">
+    @if (mainNavService.directMessage) {
+    <app-chat-header [chatType]="'dm'" class="mb-[10px]"></app-chat-header>
     <div class="flex flex-1 w-full overflow-y-auto">
-      <app-chat-messages [messages]="channelService.messages[0].answers" [chatType]="'thread'"
-        [threadHeadMessage]="channelService.messages[0]"></app-chat-messages>
+      <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages"
+        [chatType]="'dm'"></app-chat-messages>
     </div>
+    } @else {
+    <app-chat-header [chatType]="'channel'" class="mb-[10px]"></app-chat-header>
+    <div class="flex flex-1 w-full overflow-y-auto">
+      <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages"
+        [chatType]="'channel'"></app-chat-messages>
+    </div>
+    }
     <app-chat-input class=""></app-chat-input>
   </div>
   }
+
+  @if (mainNavService.showThread()) {
+    <app-thread class="w-full h-[100% - 3rem] xl:max-w-[485px] my-6"></app-thread>
+  }
+
 </section>
 
 <div [ngClass]="{
