--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -31,7 +31,7 @@
 
       <!-- Messages  -->
 
-          @for (message of messageService.messages(); track message; let i = $index) {
+          @for (message of messages; track message; let i = $index) {
               @if (newDay) {
                   <div class="flex items-center text-[18px] my-[10px] px-4">
                       <div class="w-full h-[1px] bg-lightpurple">
@@ -75,7 +75,7 @@
                                   <img src="assets/icons/add_emoji.svg" alt="Add emoji">
                               </button>
                           </div>
-                      } -->
+                      } 
                   </div>
               </div>
           }
