--- a/src/app/components/shared/popUp/edit-profil/edit-profil.component.html
+++ b/src/app/components/shared/popUp/edit-profil/edit-profil.component.html
@@ -13,7 +13,8 @@
   </div>
 
   <div class="flex justify-center w-full">
-    <img class="size-52 rounded-[50%]" src="/assets/imgs/avatar3.svg" alt="" />
+    <!--  <img class="size-52 rounded-[50%]" src="/assets/imgs/avatar3.svg" alt="" /> -->
+    <img class="size-52 rounded-[50%]" [src]="avatarUrl" alt="" />
   </div>
 
   <div class="flex gap-2 text-xl font-bold mb-[-32px] p-[12px]">
