update edit channel

--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -55,7 +55,7 @@
 </section>
 
 <div [ngClass]="{
-    hidden: overlayService.hideAddChannelPopUp() || showMessagesOnly
+    hidden: overlayService.hideAddChannelPopUp()
   }"
   class="absolute flex top-0 bottom-0 left-0 right-0 bg-white lg:bg-[rgba(0,0,0,0.1)] justify-center lg:items-center">
   <app-add-channel class="top-[20%]"></app-add-channel>
