--- a/src/app/components/shared/popUp/add-channel/add-channel.component.html
+++ b/src/app/components/shared/popUp/add-channel/add-channel.component.html
@@ -13,14 +13,14 @@
 
   <div class="flex flex-col gap-5">
     <span class="font-bold">Channel-Name</span>
-    <input [(ngModel)]="overlayService.newChannel.name" class="px-5 py-4 border border-black rounded-[40px]" type="text"
+    <input [(ngModel)]="channelService.createChannel.name" class="px-5 py-4 border border-black rounded-[40px]" type="text"
       placeholder="#  z.B. Kooperationsprojekte" />
   </div>
 
   <div class="flex flex-col gap-5">
     <span class="font-bold">Beschreibung</span>
     <!-- <input class="px-5 py-4 border border-black rounded-[40px]" type="text" placeholder="Dein Text hier" /> -->
-     <textarea [(ngModel)]="overlayService.newChannel.description" class="px-5 py-4 border border-black h-32 rounded-[40px]" placeholder="Dein Text hier" name="" id=""></textarea>
+     <textarea [(ngModel)]="channelService.createChannel.description" class="px-5 py-4 border border-black h-32 rounded-[40px]" placeholder="Dein Text hier" name="" id=""></textarea>
   </div>
 
   <!-- <button (click)="createChannel()">Create</button> -->
