--- a/src/app/components/main-page/channel/channel.component.html
+++ b/src/app/components/main-page/channel/channel.component.html
@@ -1,1 +1,6 @@
-<p>channel works!</p>
+<app-chat-header [chatType]="'channel'" class="mb-[10px]"></app-chat-header>
+<div class="flex flex-1 w-full overflow-y-auto">
+  <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages"
+    [chatType]="'channel'"></app-chat-messages>
+</div>
+<app-chat-input class=""></app-chat-input>
