--- a/src/app/components/main-page/main-page.component.scss
+++ b/src/app/components/main-page/main-page.component.scss
@@ -1,6 +1,6 @@
 :host {
-    height: calc(100vh - 80px);
-    max-height: calc(100vh - 80px);
+    height: 100vh;
+    max-height: 100vh;
     width: 100%;
     display: flex;
     flex-direction: column;
