--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,94 +1,60 @@
 <section class="box-border pb-4 bg-white">
-  <!-- <app-chat-header class="fixed top-[80px] right-0 left-0"></app-chat-header> -->
-  <div class="box-border flex flex-col" [ngClass]="{ 'pb-[0]': chatType !== 'dm'}">
-      <!-- @if (chatType === 'thread' && threadHeadMessage !== undefined) { -->
-          <!-- <div class="flex gap-5 mt-[25px] px-4" [ngClass]="{ 'flex-row-reverse': fromCurrentUser(threadHeadMessage.user.name)}">
-              <div class="w-max">
-                  <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ threadHeadMessage.user.avatar }}.svg" alt="Avatar">
-              </div>
-              <div class="flex flex-col gap-2">
-                  <div class="flex items-center gap-5"  [ngClass]="{ 'justify-end': fromCurrentUser(threadHeadMessage.user.name)}">
-                      <span class="text-lg font-bold">{{ threadHeadMessage.user.name }}</span>
-                      <span class="text-sm">{{ threadHeadMessage.time }}</span>
-                  </div>
-                  <div class=" p-[15px] rounded-[30px]" [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser(threadHeadMessage.user.name), 'bg-primary rounded-ss-none': !fromCurrentUser(threadHeadMessage.user.name) }">
-                      <span>{{ threadHeadMessage.content }}</span>
-                  </div>
-                  
-              </div>
-          </div>
-          <div class="flex items-center text-[18px] my-[10px] px-4">
-              <div class="py-[5px] px-[15px] whitespace-nowrap">
-                  @if (threadHeadMessage.answers !== undefined) {
-                      <p>{{ threadHeadMessage.answers.length }} Antworten</p>
-                  }
-              </div>
-              <div class="w-full h-[1px] bg-lightpurple"></div>
+    <div class="box-border flex flex-col" [ngClass]="{ 'pb-[0]': chatType !== 'dm'}">
+        @for (message of messages; track message; let i = $index) {
+            @if (newDay) {
+                <div class="flex items-center text-[18px] my-[10px] px-4">
+                    <div class="w-full h-[1px] bg-lightpurple"></div>
+                    <div class="border-lightpurple border-[1px] rounded-full py-[5px] px-[15px]">
+                        <p>Heute</p>
+                    </div>
+                    <div class="w-full h-[1px] bg-lightpurple"></div>
+                </div>
+            }
+            <div id="{{ chatType }}{{ i }}" (click)="mainNavService.editMessage(i, chatType)"
+                class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
+                [ngClass]="{ 'flex-row-reverse': fromCurrentUser('user.id'),  '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser('user.id')}">
+                <div class="w-max">
+                    <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ 0 }}.svg" alt="Avatar">
+                </div>
+                <div class="flex flex-col gap-2">
+                    <div class="flex items-center gap-5" [ngClass]="{ 'justify-end': fromCurrentUser('user.id')}">
+                        <span class="text-lg font-bold">{{ message.sender }}</span>
+                        <span class="text-sm">{{ message.timestamp }}</span>
+                    </div>
+                    <div id="msg-content" class="bg-primary p-[15px] rounded-[30px] w-min"
+                        [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser('user.id'), ' rounded-ss-none': !fromCurrentUser('user.id') }">
+                        <span>{{ message.message }}</span>
+                    </div>
 
-          </div> -->
-      <!-- } -->
-      <!-- @if (channelService.messages.length > 0) { -->
+                    @if (dummyThreatService.messages) {
+                        @if (chatType !== 'thread' && dummyThreatService.messages.length > 0) {
+                            <div class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
+                                [ngClass]="{'self-end': fromCurrentUser('user.id')}">
+                                <span (click)="mainNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{
+                                    dummyThreatService.messages.length }} Antworten</span>
+                                <span class="text-sm text-textgray">Letzte Antwort {{
+                                    dummyThreatService.messages[dummyThreatService.messages.length - 1].timestamp }}</span>
+                            </div>
+                        }
+                    }
 
-      <!-- Messages  -->
-
-          @for (message of messages; track message; let i = $index) {
-              @if (newDay) {
-                  <div class="flex items-center text-[18px] my-[10px] px-4">
-                      <div class="w-full h-[1px] bg-lightpurple">
-                      </div>
-                      <div class="border-lightpurple border-[1px] rounded-full py-[5px] px-[15px]">
-                          <p>Heute</p>
-                      </div>
-                      <div class="w-full h-[1px] bg-lightpurple"></div>
-                  </div>
-              }
-              <div id="{{ chatType }}{{ i }}" (click)="mainNavService.editMessage(i, chatType)" class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary" [ngClass]="{ 'flex-row-reverse': fromCurrentUser('user.id'),  '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser('user.id')}">
-                  <div class="w-max">
-                      <img class="min-w-[50px] size-[50px] rounded-full" src="assets/imgs/avatar{{ 0 }}.svg" alt="Avatar">
-                  </div>
-                  <div class="flex flex-col gap-2">
-                      <div class="flex items-center gap-5" [ngClass]="{ 'justify-end': fromCurrentUser('user.id')}">
-                          <span class="text-lg font-bold">{{ message.sender }}</span>
-                          <span class="text-sm">{{ message.timestamp }}</span>
-                      </div>
-                      <div id="msg-content" class="bg-primary p-[15px] rounded-[30px]" [ngClass]="{ 'bg-purple2 text-white rounded-se-none rounded-ss-[30px]': fromCurrentUser('user.id'), ' rounded-ss-none': !fromCurrentUser('user.id') }">
-                          <span>{{ message.message }}</span>
-                      </div>
-
-                      @if (dummyThreatService.messages) {
-                          @if (chatType !== 'thread' && dummyThreatService.messages.length > 0) {
-                              <div class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]" [ngClass]="{'self-end': fromCurrentUser('user.id')}">
-                                  <span (click)="mainNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{ dummyThreatService.messages.length }} Antworten</span>
-                                  <span class="text-sm text-textgray">Letzte Antwort {{ dummyThreatService.messages[dummyThreatService.messages.length - 1].timestamp }}</span>
-                              </div>
-                          }
-                      }
-
-                      @if (message.reactions.length > 0) {
-                          <div class="flex items-center gap-2 w-max" [ngClass]="{'self-end pr-[5px]': fromCurrentUser('user.id')}">
-                              @for (reaction of message.reactions; track $index) {
-                                  <button class="flex items-center border-lightpurple border-[1px] rounded-full gap-[10px] py-[5px] px-[10px]">
-                                      <img class="size-6" src="assets/icons/edit.svg" alt="Emoji"><span class="text-base">{{ reaction.users.length }}</span>
-                                  </button>
-                              }
-                              <button>
-                                  <img src="assets/icons/add_emoji.svg" alt="Add emoji">
-                              </button>
-                          </div>
-                      } 
-                  </div>
-              </div>
-          }
-      <!-- } -->
-  </div>
-  @if (chatType === 'dm') {
-      <div class="flex flex-col gap-6 px-4 pt-4 ml-4">
-          <div class="flex items-end">
-              <img class="size-[88px] rounded-full" src="assets/imgs/avatar1.svg" alt="Avatar">
-              <p class="text-2xl font-bold">Sofia Müller</p>
-          </div>
-          <p class="text-xl text-textgray">Diese Unterhaltung findet nur zwischen <span class="text-purple3">&#64;Sofia Müller</span> und dir statt.</p>
-      </div>
-  }
-  <!-- <app-chat-input class="fixed bottom-[30px] left-0 right-0"></app-chat-input> -->
+                    @if (message.reactions.length > 0) {
+                        <div class="flex items-center gap-2 w-max"
+                            [ngClass]="{'self-end pr-[5px]': fromCurrentUser('user.id')}">
+                            @for (reaction of message.reactions; track $index) {
+                                <button
+                                    class="flex items-center border-lightpurple border-[1px] rounded-full gap-[10px] py-[5px] px-[10px]">
+                                    <img class="size-6" src="assets/icons/edit.svg" alt="Emoji"><span class="text-base">{{
+                                        reaction.users.length }}</span>
+                                </button>
+                            }
+                            <button>
+                                <img src="assets/icons/add_emoji.svg" alt="Add emoji">
+                            </button>
+                        </div>
+                    }
+                </div>
+            </div>
+        }
+    </div>
 </section>
