--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,7 +10,8 @@
 body {
     width: 100%;
     max-height: 100vh;
-    overflow-y: hidden;
+    height: 100vh;
+    // overflow-y: hidden;
 }
 
 @font-face {
