--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -2,13 +2,7 @@
     <div class="box-border flex flex-col" [ngClass]="{ 'pb-[0]': chatType !== 'dm'}">
         @for (message of messages; track message; let i = $index) {
             @if (newDay) {
-                <div class="flex items-center text-[18px] my-[10px] px-4">
-                    <div class="w-full h-[1px] bg-lightpurple"></div>
-                    <div class="border-lightpurple border-[1px] rounded-full py-[5px] px-[15px]">
-                        <p>Heute</p>
-                    </div>
-                    <div class="w-full h-[1px] bg-lightpurple"></div>
-                </div>
+                <app-chat-seperator class="flex items-center text-[18px] my-[10px] px-4"></app-chat-seperator>
             }
             <div id="{{ chatType }}{{ i }}" (click)="mainNavService.editMessage(i, chatType)"
                 class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
