--- a/src/app/components/main-page/thread/thread.component.html
+++ b/src/app/components/main-page/thread/thread.component.html
@@ -27,7 +27,7 @@
             <div class="w-full h-[1px] bg-lightpurple"></div>
         </div>
 
-        <app-chat-messages [messages]="dummyThreatService.messages" [chatType]="'thread'"></app-chat-messages>
+        <app-chat-messages [messages]="threadService.getThread().content" [chatType]="'thread'"></app-chat-messages>
     
     </div>
     <app-chat-input class=""></app-chat-input>
