--- a/src/app/components/shared/popUp/edit-profil/edit-profil.component.html
+++ b/src/app/components/shared/popUp/edit-profil/edit-profil.component.html
@@ -31,6 +31,7 @@
         type="text"
         placeholder="Max Mustermann"
         class="w-full h-full bg-transparent border-none text-gray-800 placeholder-gray-400 focus:outline-none"
+        [(ngModel)]="name"
       />
     </div>
   </div>
@@ -42,6 +43,7 @@
       Abbrechen
     </button>
     <button
+      (click)="saveProfile()"
       class="w-[141px] h-[49px] rounded-[50px] border-2 border-purple2 bg-purple1 text-white"
     >
       Speichern
