--- a/src/app/components/navigation/navigation.component.html
+++ b/src/app/components/navigation/navigation.component.html
@@ -30,7 +30,8 @@
         </ul>
         }
 
-        @if(filterService.searchValue().length < 1) { <app-channels></app-channels>
+        @if(filterService.searchValue().length < 1) { 
+            <app-channels></app-channels>
             <app-direct-messages></app-direct-messages>
             }
 
