--- a/src/app/components/shared/popUp/edit-profil/edit-profil.component.html
+++ b/src/app/components/shared/popUp/edit-profil/edit-profil.component.html
@@ -1,15 +1,10 @@
 <section
-  class="fixed top-24 left-4 right-4 bg-white/100 z-50 flex justify-center items-center flex flex-col h-fit mt-[88px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)"
->
+  class="fixed top-24 left-4 right-4 bg-white/100 z-50 flex justify-center items-center max-w-lg flex-col h-fit mt-[88px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)">
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Dein Profil bearbeiten</span>
 
-    <img
-      (click)="closeOverlay()"
-      class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
-      src="/assets/icons/close.svg"
-      alt=""
-    />
+    <img (click)="closeOverlay()" class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
+      src="/assets/icons/close.svg" alt="" />
   </div>
 
   <div class="flex justify-center w-full">
@@ -25,25 +20,17 @@
   </div>
   <div class="flex items-start gap-5">
     <div
-      class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px]"
-    >
-      <input
-        type="text"
-        placeholder="Max Mustermann"
-        class="w-full h-full bg-transparent border-none text-gray-800 placeholder-gray-400 focus:outline-none"
-      />
+      class="w-full h-[48px] bg-white border border-gray-300 rounded-[42px] flex justify-between pt-[8px] pr-[24px] pb-[8px] pl-[24px]">
+      <input type="text" placeholder="Max Mustermann"
+        class="w-full h-full text-gray-800 placeholder-gray-400 bg-transparent border-none focus:outline-none" />
     </div>
   </div>
 
   <div class="flex justify-around w-full gap-2">
-    <button
-      class="w-[141px] h-[49px] rounded-[50px] border-2 border-purple2 text-purple1"
-    >
+    <button class="w-[141px] h-[49px] rounded-[50px] border-2 border-purple2 text-purple1">
       Abbrechen
     </button>
-    <button
-      class="w-[141px] h-[49px] rounded-[50px] border-2 border-purple2 bg-purple1 text-white"
-    >
+    <button class="w-[141px] h-[49px] rounded-[50px] border-2 border-purple2 bg-purple1 text-white">
       Speichern
     </button>
   </div>
