--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,28 +1,20 @@
-<div
-  class="w-full h-[80px] flex justify-between items-center bg-header pr-[16px] pl-[16px]"
->
+<div class="w-full h-[80px] flex justify-between items-center bg-header pr-[16px] pl-[16px]">
   <img src="assets/imgs/logo.svg" alt="DaBubble Logo" class="h-16 mt-4" />
 
   <app-search class="w-[50%] hidden lg:block self-end"></app-search>
 
-  <img
-    [src]="avatarUrl"
-    alt="DaBubble avatar"
-    class="h-16 mt-4 rounded-full cursor-pointer"
-    (click)="toggleOverlay()"
-  />
+  <img [src]="avatarUrl" alt="DaBubble avatar" class="h-16 mt-4 rounded-full cursor-pointer"
+    (click)="overlayService.logoutOvelay()" />
 </div>
 
-<app-log-out-mobile
-  *ngIf="isMobile"
-  [isVisible]="showOverlay"
-  (close)="closeOverlay()"
-></app-log-out-mobile>
+<!-- <app-log-out-mobile *ngIf="isMobile" [isVisible]="showOverlay" (close)="closeOverlay()"></app-log-out-mobile>
 <app-profile *ngIf="ui.showProfileOverlay()"></app-profile>
-<app-edit-profil *ngIf="ui.showEditProfileOverlay()"></app-edit-profil>
+<app-edit-profil *ngIf="ui.showEditProfileOverlay()"></app-edit-profil> -->
+
+
 
 <!-- Overlay-Popup unten -->
-<div
+<!-- <div
   *ngIf="showOverlay"
   appClickOutside
   (appClickOutside)="closeOverlay()"
@@ -46,4 +38,4 @@
       <p>Log out</p>
     </div>
   </button>
-</div>
+</div> -->
