--- a/src/app/components/shared/popUp/profile/profile.component.html
+++ b/src/app/components/shared/popUp/profile/profile.component.html
@@ -1,51 +1,61 @@
 <section
-  class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1)">
+  class="flex flex-col min-w-80 w-full h-fit mt-[80px] rounded-[30px] gap-9 p-10 text-xl shadow-2xl border-2 border-rgba(255, 255, 255, 1) max-w-lg bg-white">
+
+
+
   <div class="flex justify-between w-full">
     <span class="text-2xl font-bold">Profil</span>
-
-    <img (click)="closeProfile()" class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
+    <img  (click)="overlayService.profileOverlay()" class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]"
       src="/assets/icons/close.svg" alt="" />
   </div>
+
+
 
   <div class="flex justify-center w-full">
     <img class="size-52 rounded-[50%]" [src]="avatarUrl" alt="Profilbild" />
   </div>
 
+
+
   <div class="flex flex-col h-20">
     <div class="flex justify-between">
       <p class="flex text-3xl font-bold w-fit mr-[24px]">{{ name }}</p>
-      <img (click)="openEditProfileOverlay()"
+      <img
         class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9] w-[40px] h-[40px] rounded-[40px] p-[3px] gap-[0px] transition-all ease-out"
         src="/assets/icons/edit2.svg" alt="" />
-
-      <div
-        class="p-[1%] size-9 bg-primary rounded-[50%] cursor-pointer hover:scale-[1.2] duration-200 active:scale-[0.9] xs:hidden">
-        <img class="size-full" src="/assets/icons/edit.svg" alt="" />
-      </div>
     </div>
 
     <div class="flex items-center gap-4">
       <div class="rounded-[50%] bg-online size-4"></div>
       Aktiv
     </div>
+
+
   </div>
+
+
 
   <div class="flex items-start gap-5">
     <img src="/assets/icons/mail.svg" alt="" />
 
     <div class="flex flex-col">
       <span class="font-bold">E-Mail-Adresse</span>
-      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200">{{
-        email
-        }}</a>
+      <a class="cursor-pointer text-linkblue hover:scale-[1.1] duration-200">test&#64;mail.de</a>
     </div>
   </div>
 
+
+
   <div class="flex justify-center w-full">
+
     <button
       class="flex text-white px-6 py-3 bg-purple1 rounded-[50px] gap-3 hover:scale-[1.2] duration-200 active:scale-[0.9]">
       <img src="/assets/icons/mode_comment.svg" alt="" />
       Nachricht
     </button>
+    
   </div>
+
+
+
 </section>
