--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -76,5 +76,5 @@
 
 
 <div (click)="overlayService.logoutOvelay()" [ngClass]="{hidden: overlayService.hideLogoutOverlay}" class="absolute top-0 bottom-0 left-0 right-0 flex items-end justify-center lg:items-start lg:justify-end">
-  <app-log-out class="lg:mt-24 lg:mr-4"></app-log-out>
+  <app-log-out class="w-full lg:w-fit lg:mt-24 lg:mr-4"></app-log-out>
 </div>
