--- a/src/app/components/navigation/channels/channels.component.html
+++ b/src/app/components/navigation/channels/channels.component.html
@@ -9,7 +9,7 @@
                 Channels
             </div>
         </button>
-        <img (click)="overlayService.addCannelPopup()"
+        <img (click)="overlayService.addCannelOverlay()"
             class="cursor-pointer size-8 hover:scale-[1.1] duration-150 active:scale-[0.9]" src="/assets/icons/add.svg"
             alt="">
     </div>
@@ -24,7 +24,7 @@
                 </li>
 
         }
-        <li (click)="overlayService.addCannelPopup()"
+        <li (click)="overlayService.addCannelOverlay()"
             class="flex gap-3 py-3 cursor-pointer hover:text-purple3 pl-7 hover:font-bold"><img
                 src="/assets/icons/add_circle.svg" alt=""> Channel hinzufügen</li>
     </ul>
