--- a/src/app/components/shared/popUp/add-user1/add-user1.component.html
+++ b/src/app/components/shared/popUp/add-user1/add-user1.component.html
@@ -1,4 +1,4 @@
-@if (!overlayService.hideAddUserPopUp()) {
+<!-- @if (!overlayService.overlayService.addUserOverlay()) {
 <div appClickOutside (appClickOutside)="closeOverlay()"
   class="fixed bottom-0 left-0 w-full h-fit bg-white px-[26px] py-[30px] rounded-t-[30px] flex flex-col items-start shadow-lg z-50 gap-[25px] border-2 border-rgba(255, 255, 255, 1) overlay-animated">
   <div class="flex justify-between w-full">
@@ -7,9 +7,9 @@
     </span>
     <img class="cursor-pointer hover:scale-[1.3] duration-200 active:scale-[0.9]" src="/assets/icons/close.svg" alt=""
       (click)="closeOverlay()" />
-  </div>
+  </div> -->
   <!-- Rest deines overlays -->
-  <div class="flex flex-col w-full gap-4">
+  <!-- <div class="flex flex-col w-full gap-4">
     <label class="flex items-center gap-3 cursor-pointer">
       <input type="radio" name="addOption" [(ngModel)]="addOption" value="all" class="accent-purple1" />
       <span class="w-full h-[25px]">
@@ -36,4 +36,4 @@
     </button>
   </div>
 </div>
-}
+} -->
