--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<router-outlet />
-
-
-
-
+<section class="flex justify-center w-full">
+    <div class="w-full max-w-screen-2xl">
+        <router-outlet />
+    </div>
+</section>
