update max width and content center

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
-<section class="flex justify-center w-full">
-    <div class="w-full max-w-screen-2xl">
+<section class="flex justify-center w-full bg-purple2">
+    <div class="relative w-full max-w-screen-3xl">
         <router-outlet />
     </div>
 </section>
