--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -5,7 +5,7 @@
         </div>
     } @else if (chatType === 'thread') {
         <div class="flex items-center gap-[14px] w-max rounded-full text-xl font-bold">
-            <span>Thread </span><span class="text-purple2 text-[14px]"># {{ channelService.channelName }}</span>
+            <span>Thread </span><span class="text-purple2 text-[14px]"># {{ channelService }}</span>
         </div>
     } @else if (chatType === 'dm') {
         <div class="flex items-center gap-4">
