add channel with all membersID

--- a/src/app/components/shared/popUp/add-user/add-user.component.html
+++ b/src/app/components/shared/popUp/add-user/add-user.component.html
@@ -27,7 +27,7 @@
     }
 
 
-    <button (click)="overlayService.createChannel()"
+    <button (click)="addChannel()"
         class=" self-end h-12 text-white bg-slate-500 w-36 rounded-3xl hover:scale-[1.1] duration-200
         active:scale-[0.9]">
         hinzufügen
