--- a/src/app/components/shared/header/header.component.html
+++ b/src/app/components/shared/header/header.component.html
@@ -1,4 +1,4 @@
-<div class="w-full h-[80px] flex justify-between items-center bg-header pr-[16px] pl-[16px]">
+<div class="w-full h-[80px] bg-primary flex justify-between items-center pr-[16px] pl-[16px]">
   <img src="assets/imgs/logo.svg" alt="DaBubble Logo" class="h-16 mt-4" />
 
   <app-search class="w-[50%] hidden lg:block self-end"></app-search>
