--- a/src/app/components/shared/chat-messages/chat-messages.component.html
+++ b/src/app/components/shared/chat-messages/chat-messages.component.html
@@ -1,12 +1,20 @@
 <section class="box-border pb-4 bg-white">
-    <div class="box-border flex flex-col" [ngClass]="{ 'pb-[0]': chatType !== 'dm'}">
+    <div class="box-border flex flex-col">
         @for (message of messages; track message; let i = $index) {
-            @if (!lastMessageDate) {
-                <app-chat-seperator
-                    class="flex items-center text-[18px] my-[10px] px-4"
-                    [date]="message.timestamp">
-                </app-chat-seperator>
+            @if (messages !== undefined) {
+                @if (i === 0) {
+                    <app-chat-seperator
+                        class="flex items-center text-[18px] my-[10px] px-4"
+                        [date]="messageService.formatDate(message.timestamp)">
+                    </app-chat-seperator>
+                } @else if (!messageService.isSameDay(messageService.getDateFromTimestamp(message.timestamp), messageService.getDateFromTimestamp(messages[i - 1].timestamp))) {
+                    <app-chat-seperator
+                        class="flex items-center text-[18px] my-[10px] px-4"
+                        [date]="messageService.formatDate(message.timestamp)">
+                    </app-chat-seperator>
+                }
             }
+            
             <div id="{{ chatType }}{{ i }}" (click)="mainNavService.editMessage(i, chatType)"
                 class="flex gap-5 mt-[25px] px-4 py-2 cursor-pointer hover:bg-primary"
                 [ngClass]="{ 'flex-row-reverse': fromCurrentUser('user.id'), '[&>div>#msg-content]:hover:bg-white': !fromCurrentUser('user.id')}">
@@ -15,8 +23,8 @@
                 </div>
                 <div class="flex flex-col gap-2">
                     <div class="flex items-center gap-5" [ngClass]="{ 'justify-end': fromCurrentUser('user.id')}">
-                        <span class="text-lg font-bold">{{ message.sender }}</span>
-                        <span class="text-sm">{{ message.timestamp }}</span>
+                        <span class="text-lg font-bold">{{ userService.getUserById2(message.sender) }}</span>
+                        <span class="text-sm">{{ messageService.formatTime(message.timestamp) }} Uhr</span>
                     </div>
                     <div id="msg-content"
                         class="bg-primary p-[15px] rounded-[30px] w-min"
@@ -24,14 +32,11 @@
                         <span>{{ message.message }}</span>
                     </div>
 
-
                     @if (message.threadId !== '' && chatType !== 'thread') {
-                        @if (dummyThreatService.messages.length > 0) {
-                            <app-chat-message-answer
-                                class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
-                                [ngClass]="{'self-end': fromCurrentUser('user.id')}">
-                            </app-chat-message-answer>
-                        }
+                        <app-chat-message-answer
+                            class="cursor-pointer flex flex-col xs:flex-row xs:items-center xs:gap-[20px]"
+                            [ngClass]="{'self-end': fromCurrentUser('user.id')}">
+                        </app-chat-message-answer>
                     }
 
                     @if (message.reactions.length > 0) {
