Chat header members

--- a/src/app/components/shared/chat-header/chat-header.component.html
+++ b/src/app/components/shared/chat-header/chat-header.component.html
@@ -1,39 +1,65 @@
 <section class="flex items-center justify-between box-border bg-white py-[13px] px-4 header rounded-ss-[30px] rounded-se-[30px]">
-    @if (chatType === 'channel') {
+    @switch (chatType) {
+        @case ('channel') {
+            <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary" (click)="overlayService.editChannel()">
+                <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag">
+                @if (channelService.channels[this.channelService.currentIndex()]) {
+                    <span>{{ channelService.channels[this.channelService.currentIndex()].name }}</span>
+                }
+                <img class="ml-[14px]" src="assets/icons/arrow_down.svg" alt="">
+            </div>
+        }
+        @case ('thread') {
+            <div class="flex items-center gap-[14px] w-max rounded-full text-xl font-bold">
+                <span>Thread </span><span class="text-purple2 text-[14px]"># {{ channelService }}</span>
+            </div>
+        }
+        @case ('dm') {
+            <div class="flex items-center gap-4">
+                <div class="relative">
+                    <img class="size-[50px] rounded-full" src="assets/imgs/avatar1.svg" alt="Avatar">
+                    <img class="absolute bottom-0 right-0" src="assets/icons/online.svg" alt="Online">
+                </div>
+                <p class="text-xl font-bold">Sofia Müller</p>
+            </div>
+        }
+        @case ('new') {
+            <div>
+                <p>Neue Nachricht</p>
+                <input type="text" name="" id="">
+            </div>
+        }
+    }
 
+    @if (chatType === 'channel') {
         <!-- <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary" (click)="overlayService.editChannel()">
-            <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag"><span>{{ getChannelName() }} </span><img class="ml-[14px]" src="assets/icons/arrow_down.svg" alt="">
-            </div> -->
-        <div class="flex items-center gap-[14px] py-[3px] px-[10px] w-max rounded-full cursor-pointer text-xl font-bold hover:bg-primary" (click)="overlayService.editChannel()">
             <img class="size-[22px]" src="assets/icons/hashtag.svg" alt="hashtag">
             @if (channelService.channels[this.channelService.currentIndex()]) {
                 <span>{{ channelService.channels[this.channelService.currentIndex()].name }}</span>
             }
             <img class="ml-[14px]" src="assets/icons/arrow_down.svg" alt="">
-        </div>
+        </div> -->
     } @else if (chatType === 'thread') {
-        <div class="flex items-center gap-[14px] w-max rounded-full text-xl font-bold">
+        <!-- <div class="flex items-center gap-[14px] w-max rounded-full text-xl font-bold">
             <span>Thread </span><span class="text-purple2 text-[14px]"># {{ channelService }}</span>
-        </div>
+        </div> -->
     } @else if (chatType === 'dm') {
-        <div class="flex items-center gap-4">
+        <!-- <div class="flex items-center gap-4">
             <div class="relative">
                 <img class="size-[50px] rounded-full" src="assets/imgs/avatar1.svg" alt="Avatar">
                 <img class="absolute bottom-0 right-0" src="assets/icons/online.svg" alt="Online">
             </div>
             <p class="text-xl font-bold">Sofia Müller</p>
-        </div>
-    } @else if (chatType === 'search') {
-        <div class="">
-            <p class="text-lg font-bold">Search</p>
-        </div>
+        </div> -->
     }
+
     <div class="flex items-center gap-[10px]">
         @if (chatType === 'channel') {
             <div class="flex items-center px-[10px] py-[3px] rounded-full cursor-pointer hover:bg-primary max-[1024px]:hidden" [ngClass]="{'hidden': mainNavService.hideChannelMembers}">
-                @for (user of channelService.channels2[0].users; track user; let i = $index) {
+                <!-- @for (user of channelService.channels2[0].users; track user; let i = $index) { -->
+                @for (user of channelService.getChannelMembers(); track user; let i = $index) {
                     @if (i < 4) {
-                        <img class="size-9 mr-[-10px] border-2 border-white rounded-full" src="assets/imgs/avatar{{ user.avatar }}.svg" alt="Member">
+                        <img class="size-9 mr-[-10px] border-2 border-white rounded-full" src="{{ user.avatar }}" alt="Member">
                     } @else if (i === 4) {
                         <img class="border-2 border-white rounded-full cursor-pointer size-9" src="assets/imgs/avatar3.svg" alt="Member">
                         <span class="ml-[10px]">{{ channelService.channels2[0].users?.length}}</span>
@@ -43,7 +69,7 @@
             <button class="flex items-center justify-center rounded-full size-[34px] bg-primary">
                 <img src="assets/icons/add_user.svg" alt="Add user">
             </button>
-        } @else if (chatType === 'thread' || chatType === 'search') {
+        } @else if (chatType === 'thread') {
             <button (click)="mainNavService.openChannel()" class="flex items-center justify-center rounded-full size-[34px] hover:bg-primary">
                 <img src="assets/icons/close.svg" alt="Add user">
             </button>
