--- a/src/app/components/main-page/new-message/new-message.component.html
+++ b/src/app/components/main-page/new-message/new-message.component.html
@@ -1,6 +1,6 @@
-<app-chat-header [chatType]="'channel'" class="mb-[10px]"></app-chat-header>
+<app-chat-header [chatType]="'new'" class="mb-[10px]"></app-chat-header>
 <div class="flex flex-1 w-full overflow-y-auto">
   <app-chat-messages class="flex flex-col w-full" [messages]="dummyThreatService.messages"
-    [chatType]="'channel'"></app-chat-messages>
+    [chatType]="'new'"></app-chat-messages>
 </div>
 <app-chat-input class=""></app-chat-input>
