choice input overlay filterMembers, load Thread from firebase

--- a/src/app/components/shared/chat-message-answer/chat-message-answer.component.html
+++ b/src/app/components/shared/chat-message-answer/chat-message-answer.component.html
@@ -1,4 +1,4 @@
-<span (click)="mainNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{
-    dummyThreatService.messages.length }} Antworten</span>
-<span class="text-sm text-textgray">Letzte Antwort {{
-    dummyThreatService.messages[dummyThreatService.messages.length - 1].timestamp }}</span>
+<!-- <span (click)="mainNavService.openThread()" class="text-base text-purple3 hover:font-bold">{{ threadServic.loadThreadById(message.threadId).content.length }} Antworten</span>
+@if (getThread() !== undefined) {
+    <span class="text-sm text-textgray">Letzte Antwort {{ messageService.formatTime(threadServic.loadThreadById(message.threadId).content[threadServic.loadThreadById(message.threadId).content.length - 1].timestamp) }} Uhr</span> -->
+<!-- } -->
