--- a/src/app/components/main-page/main-page.component.html
+++ b/src/app/components/main-page/main-page.component.html
@@ -56,7 +56,7 @@
 
 <div (click)="overlayService.addUserOverlay()" class="absolute top-0 bottom-0 left-0 right-0 flex items-end justify-center lg:items-center"
   [ngClass]="{hidden: overlayService.hideAddUser}">
-  <app-add-user (click)="$event.stopPropagation()" class="w-full max-w-[710px]"></app-add-user>
+  <app-add-user (click)="$event.stopPropagation()" class="w-full lg:max-w-[710px]"></app-add-user>
 </div>
 
 
